--- a/html/가입현황.html
+++ b/html/가입현황.html
@@ -64,9 +64,9 @@
                 <span class="age">32세</span>
               </li>
               <li class="btn_area">
-                <a class="btn_icon favorites on" href="#">즐겨찾기</a>
-                <a class="btn_icon statistics" href="#">통계</a>
-                <a class="btn_icon sms" href="#">문자</a>
+               <span class="btn_icon favorites on">즐겨찾기</span>
+                <span class="btn_icon statistics">통계</span>
+                <span class="btn_icon sms">문자</span>
               </li>
               <li class="date">
                 <div class="info_grid small">
@@ -102,9 +102,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -135,9 +135,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -168,9 +168,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -201,9 +201,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -234,9 +234,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -267,9 +267,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -300,9 +300,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -333,9 +333,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -366,9 +366,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -399,9 +399,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
