--- a/html/그래프.html
+++ b/html/그래프.html
@@ -29,8 +29,8 @@
             <div class="select_box bg_type">
               <select id="" name="">
                 <option value="1">최근 동의 순</option>
+                <option value="1">이름순</option>
                 <option value="1">동의 종료 순</option>
-                <option value="1">최근 등록 순</option>
                 <option value="1">최근 분석 순</option>
                 <option value="1">최근 상령일 순</option>
               </select>
@@ -66,9 +66,9 @@
                 <span class="age">32세</span>
               </li>
               <li class="btn_area">
-                <a class="btn_icon favorites on" href="#">즐겨찾기</a>
-                <a class="btn_icon statistics" href="#">통계</a>
-                <a class="btn_icon sms" href="#">문자</a>
+               <span class="btn_icon favorites on">즐겨찾기</span>
+                <span class="btn_icon statistics">통계</span>
+                <span class="btn_icon sms">문자</span>
               </li>
               <li class="date">
                 <div class="info_grid small">
@@ -104,9 +104,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -137,9 +137,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -170,9 +170,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -203,9 +203,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -236,9 +236,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -269,9 +269,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -302,9 +302,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -335,9 +335,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -368,9 +368,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -401,9 +401,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
