--- a/보장분석_guide_publishing.html
+++ b/보장분석_guide_publishing.html
@@ -102,9 +102,9 @@
 				<strong>① UI Design</strong>
 				<ul class="bullet2">
 					<li></li>
-					<li><strong class="gg_black"><span class="gg_red">gu.</span>renew.common.scss</strong><br><span class="gg_gray">reset, common style, form, button 등 기본(공통) 스타일 정의</span></li>
-					<li><strong class="gg_black"><span class="gg_red">gu.</span>renew.layout.scss</strong><br><span class="gg_gray">페이지 레이아웃 스타일 정의</span></li>
-					<li><strong class="gg_black"><span class="gg_red">gu.</span>renew.contents</strong><br><span class="gg_gray">컨텐츠 영역 스타일 정의</span></li>
+					<li><strong class="gg_black"><span class="gg_red">gu.</span>common.css</strong><br><span class="gg_gray">reset, common style, form, button 등 기본(공통) 스타일 정의</span></li>
+					<li><strong class="gg_black"><span class="gg_red">gu.</span>layout.css</strong><br><span class="gg_gray">페이지, 팝업 등 레이아웃 스타일 정의</span></li>
+					<li><strong class="gg_black"><span class="gg_red">gu.</span>contents.css</strong><br><span class="gg_gray">컨텐츠 영역 스타일 정의</span></li>
 				</ul>
 				<p class="mgt10">※ 현재 운영 파일 <br>common.gu.css, layout.gu.css, contents.gu.css</p>
 			</li>
