--- a/html/index.html
+++ b/html/index.html
@@ -75,8 +75,8 @@
             <div class="select_box bg_type">
               <select id="" name="">
                 <option value="1">최근 동의 순</option>
+                <option value="1">이름순</option>
                 <option value="1">동의 종료 순</option>
-                <option value="1">최근 등록 순</option>
                 <option value="1">최근 분석 순</option>
                 <option value="1">최근 상령일 순</option>
               </select>
@@ -112,9 +112,9 @@
                 <span class="age">32세</span>
               </li>
               <li class="btn_area">
-                <a class="btn_icon favorites on" href="#">즐겨찾기</a>
-                <a class="btn_icon statistics" href="#">통계</a>
-                <a class="btn_icon sms" href="#">문자</a>
+                <span class="btn_icon favorites on">즐겨찾기</span>
+                <span class="btn_icon statistics">통계</span>
+                <span class="btn_icon sms">문자</span>
               </li>
               <li class="date">
                 <div class="info_grid small">
@@ -150,9 +150,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -183,9 +183,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -216,9 +216,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -249,9 +249,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -282,9 +282,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -315,9 +315,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -348,9 +348,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -381,9 +381,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -414,9 +414,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -447,9 +447,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
