--- a/html/컨설팅.html
+++ b/html/컨설팅.html
@@ -25,8 +25,8 @@
             <div class="select_box bg_type">
               <select id="" name="">
                 <option value="1">최근 동의 순</option>
+                <option value="1">이름순</option>
                 <option value="1">동의 종료 순</option>
-                <option value="1">최근 등록 순</option>
                 <option value="1">최근 분석 순</option>
                 <option value="1">최근 상령일 순</option>
               </select>
@@ -62,9 +62,9 @@
                 <span class="age">32세</span>
               </li>
               <li class="btn_area">
-                <a class="btn_icon favorites on" href="#">즐겨찾기</a>
-                <a class="btn_icon statistics" href="#">통계</a>
-                <a class="btn_icon sms" href="#">문자</a>
+                <span class="btn_icon favorites on">즐겨찾기</span>
+                <span class="btn_icon statistics">통계</span>
+                <span class="btn_icon sms">문자</span>
               </li>
               <li class="date">
                 <div class="info_grid small">
@@ -100,9 +100,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -133,9 +133,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -166,9 +166,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -199,9 +199,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -232,9 +232,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -265,9 +265,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -298,9 +298,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -331,9 +331,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -364,9 +364,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
@@ -397,9 +397,9 @@
                         <span class="age">32세</span>
                       </li>
                       <li class="btn_area">
-                        <a class="btn_icon favorites" href="#">즐겨찾기</a>
-                        <a class="btn_icon statistics" href="#">통계</a>
-                        <a class="btn_icon sms" href="#">문자</a>
+                        <span class="btn_icon favorites">즐겨찾기</span>
+                        <span class="btn_icon statistics">통계</span>
+                        <span class="btn_icon sms">문자</span>
                       </li>
                       <li class="date">
                         <div class="info_grid small">
