--- a/html/index.html
+++ b/html/index.html
@@ -509,8 +509,8 @@
         <div class="select_box">
           <select class="small" id="" name="">
             <option value="1">최근 동의 순</option>
-            <option value="1">동의 종료 순</option>
-            <option value="1">최근 등록 순</option>
+            <option value="1">이름순</option>
+            <option value="1">동의종료 순</option>
             <option value="1">최근 분석 순</option>
             <option value="1">최근 상령일 순</option>
           </select>
@@ -561,7 +561,8 @@
           <div class="tbody_box">
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">독고영재</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">독고영재</div>
                 <div class="td gender">남</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -576,7 +577,8 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">홍길동</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">홍길동</div>
                 <div class="td gender">남</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -591,7 +593,24 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">김하나</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">김하나</div>
+                <div class="td gender">여</div>
+                <div class="td birth">1981.05.30</div>
+                <div class="td old">32세</div>
+                <div class="td">11-30</div>
+                <div class="td">D-30</div>
+                <div class="td date">2019.10.14</div>
+                <div class="td"><a class="btn_circle like on" href="#"><span>즐겨찾기</span></a></div>
+                <div class="td"><a class="btn_circle analysis on" href="#"><span>보장분석</span></a></div>
+                <div class="td"><a class="btn_circle agree" href="#"><span>동의여부</span></a></div>
+                <div class="td attend"><a class="btn_text size_middle fill_gray" href="#"><span>출력</span></a></div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="tr">                
+                <a href="#" class="link"></a>
+                <div class="td name">선우재덕</div>
                 <div class="td gender">여</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -606,22 +625,8 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">선우재덕</a></div>
-                <div class="td gender">여</div>
-                <div class="td birth">1981.05.30</div>
-                <div class="td old">32세</div>
-                <div class="td">11-30</div>
-                <div class="td">D-30</div>
-                <div class="td date">2019.10.14</div>
-                <div class="td"><a class="btn_circle like on" href="#"><span>즐겨찾기</span></a></div>
-                <div class="td"><a class="btn_circle analysis on" href="#"><span>보장분석</span></a></div>
-                <div class="td"><a class="btn_circle agree" href="#"><span>동의여부</span></a></div>
-                <div class="td attend"><a class="btn_text size_middle fill_gray" href="#"><span>출력</span></a></div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="tr">
-                <div class="td name"><a href="#">독고영재</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">독고영재</div>
                 <div class="td gender">남</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -636,7 +641,8 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">홍길동</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">홍길동</div>
                 <div class="td gender">남</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -651,7 +657,8 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">김하나</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">김하나</div>
                 <div class="td gender">여</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -666,7 +673,8 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">선우재덕</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">선우재덕</div>
                 <div class="td gender">여</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -681,7 +689,8 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">독고영재</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">독고영재</div>
                 <div class="td gender">남</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -696,7 +705,8 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">홍길동</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">홍길동</div>
                 <div class="td gender">남</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -711,7 +721,8 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">김하나</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">김하나</div>
                 <div class="td gender">여</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -726,7 +737,8 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">선우재덕</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">선우재덕</div>
                 <div class="td gender">여</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -741,7 +753,8 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">독고영재</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">독고영재</div>
                 <div class="td gender">남</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -756,7 +769,8 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">홍길동</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">홍길동</div>
                 <div class="td gender">남</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -771,7 +785,8 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">김하나</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">김하나</div>
                 <div class="td gender">여</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
@@ -786,7 +801,8 @@
             </div>
             <div class="item">
               <div class="tr">
-                <div class="td name"><a href="#">선우재덕</a></div>
+                <a href="#" class="link"></a>
+                <div class="td name">선우재덕</div>
                 <div class="td gender">여</div>
                 <div class="td birth">1981.05.30</div>
                 <div class="td old">32세</div>
