--- a/보장분석_00.index.html
+++ b/보장분석_00.index.html
@@ -223,7 +223,7 @@ html, body {background:#fff;}
 						<td class="dep2">퍼블리싱가이드</td>
 						<td class="scr_name"></td>
 						<td class="scr_id">
-							<a href="보장분석_guide_publishing.html" target="_blank">보장분석_guide_publishing01</a>
+							<a href="보장분석_guide_publishing.html" target="_blank">기존 보장분석 가이드</a>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note"><strong></strong></td>
