--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
         scrollInertia: 150
       });
       changeLayout('main');
-      $(".td.name a").click(function(){
+      $(".tbody_box .link").click(function(){
         changeLayout('sub', 'sub.html');
       })
     })
