--- a/html/index.html
+++ b/html/index.html
@@ -484,7 +484,7 @@
               <li><a class="menu menu02" href="javascript:changeLayout('sub', '가입현황.html');"><span>가입현황</span></a></li>
               <li><a class="menu menu03" href="#"><span>진단/상세</span></a></li>
               <li><a class="menu menu04 new"  href="javascript:changeLayout('sub', '컨설팅.html');"><span>컨설팅</span></a></li>
-              <li><a class="menu menu05 new" href="javascript:changeLayout('sub', '그레프.html');"><span>그래프</span></a></li>
+              <li><a class="menu menu05 new" href="javascript:changeLayout('sub', '그래프.html');"><span>그래프</span></a></li>
             </ul>
           </div>
           <div class="bottom_position">
