--- a/html/가입현황.html
+++ b/html/가입현황.html
@@ -27,8 +27,8 @@
             <div class="select_box bg_type">
               <select id="" name="">
                 <option value="1">최근 동의 순</option>
-                <option value="1">동의 종료 순</option>
-                <option value="1">최근 등록 순</option>
+                <option value="1">이름순</option>
+                <option value="1">동의종료 순</option>
                 <option value="1">최근 분석 순</option>
                 <option value="1">최근 상령일 순</option>
               </select>
@@ -474,7 +474,7 @@
             <div class="payment">
               <dl>
                 <dt>월보험료</dt>
-                <dd><strong class="count">1264530</strong>원</dd>
+                <dd><strong>1,264,530</strong>원</dd>
               </dl>
             </div>
             <div class="state">
