가이드 수정

--- a/보장분석_00.index.html
+++ b/보장분석_00.index.html
@@ -156,7 +156,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name">가입현황</td>
 						<td class="scr_id">
-							<a href="./html/팝업-보장상세내역.html" target="_blank">02.팝업_보장 상세내역.html</a><br>
+							<a href="./html/팝업-보장상세내역.html" target="_blank">팝업_보장 상세내역.html</a><br>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -168,7 +168,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name"></td>
 						<td class="scr_id">
-							<a href="./html/팝업-보장상세내역(해지).html" target="_blank">02.팝업_보장 상세내역(해지).html</a><br>
+							<a href="./html/팝업-보장상세내역(해지).html" target="_blank">팝업_보장 상세내역(해지).html</a><br>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -179,7 +179,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name">컨설팅</td>
 						<td class="scr_id">
-							<a href="./html/팝업-가계약 추가.html" target="_blank">04.팝업_가계약 추가.html</a><br>
+							<a href="./html/팝업-가계약 추가.html" target="_blank">팝업_가계약 추가.html</a><br>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -190,7 +190,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name"></td>
 						<td class="scr_id">
-							<a href="./html/팝업-가계약조회리스트.html" target="_blank">04.팝업_가계약조회리스트.html</a><br>
+							<a href="./html/팝업-가계약조회리스트.html" target="_blank">팝업_가계약조회리스트.html</a><br>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -201,7 +201,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name"></td>
 						<td class="scr_id">
-							<a href="./html/팝업-컨설팅전후비교.html" target="_blank">04.팝업_컨설팅전후비교.html</a><br>
+							<a href="./html/팝업-컨설팅전후비교.html" target="_blank">팝업_컨설팅전후비교.html</a><br>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -212,7 +212,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name"></td>
 						<td class="scr_id">
-							<a href="./html/팝업-권장금액보장군설정.html" target="_blank">04.팝업_권장금액보장군설정.html</a><br>
+							<a href="./html/팝업-권장금액보장군설정.html" target="_blank">팝업_권장금액보장군설정.html</a><br>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note">
@@ -233,7 +233,7 @@ html, body {background:#fff;}
 						<td class="dep2"></td>
 						<td class="scr_name"></td>
 						<td class="scr_id">
-							<a href="./html/guide.html" target="_blank">보장분석_guide_publishing02</a>
+							<a href="./html/guide.html" target="_blank">form, button 가이드</a>
 						</td>
 						<td class="date">2019.12.13</td>
 						<td class="note"><strong></strong></td>
