카운트스타트 추가

--- a/html/그래프.html
+++ b/html/그래프.html
@@ -754,6 +754,7 @@
             })
             changeLayout("sub");
             subMenuActive(4);
+            counterStart();
           })
         </script>
       </div>
