--- a/html/컨설팅.html
+++ b/html/컨설팅.html
@@ -472,7 +472,7 @@
             <div class="payment">
               <dl>
                 <dt class="new">월보험료</dt>
-                <dd><strong class="count">1264530</strong>원</dd>
+                <dd><strong class="count active">1,264,530</strong>원</dd>
               </dl>
             </div>
             <div class="state">
