--- a/html/그래프.html
+++ b/html/그래프.html
@@ -476,7 +476,7 @@
             <div class="payment">
               <dl>
                 <dt>월보험료</dt>
-                <dd><strong class="count">1264530</strong>원</dd>
+                <dd><strong class="count active">1,264,530</strong>원</dd>
               </dl>
             </div>
             <div class="state">
