--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,9 @@
           },
           onUpdate: function () {
             btnTop(this)
+          },
+          whileScrolling:function(){
+            console.log(this.mcs.top);
           }
         }
       });
