--- a/html/sub.html
+++ b/html/sub.html
@@ -529,28 +529,26 @@
 
               <div class="box box3">
                 <h3 class="title">고객님<br>보장이 부족합니다.</h3>
-                <div class="text">전체 74% 부족</div>
-                <div class="graph_area">
-                  <div id="chartdiv2"></div>
-                </div>
+                <div class="text">전체 35개 보장중</div>
                 <ul class="info_box">
-                  <li class="all">
-                    <span class="tit">전체보장</span>
-                    <span class="number count">35</span>
-                  </li>
                   <li class="no">
                     <span class="tit">미가입</span>
-                    <span class="number count">35</span>
+                    <span class="number count">2</span>
                   </li>
                   <li class="lack">
                     <span class="tit">부족</span>
-                    <span class="number count">35</span>
+                    <span class="number count">5</span>
                   </li>
                   <li class="good">
                     <span class="tit">충분</span>
-                    <span class="number count">35</span>
+                    <span class="number count">28</span>
                   </li>
                 </ul>
+                <div class="text">전체 80% 충분</div>
+
+                <div class="graph_area">
+                  <div id="chartdiv2"></div>
+                </div>
                 <div class="result">
                   <span>34%</span> 보장이 <span>부족</span>하고<br>
                   40% 보장이 미가입 상태입니다.
@@ -652,40 +650,35 @@
             chart2.data = [
               {
                 country: "미가입",
-                value: 260,
+                value: 6,
                 config: {
-                  fill: am4core.color("#f0f3f8"),
-                  zIndex: 1
+                  fill: am4core.color("#6a8db3")
                 },
                 configLabel: {
-                  fill: am4core.color("#7c838f"),
-                  fontSize: "20px",
-                  fontWeight: "600"
+                  fill: am4core.color("#ffffff"),
+                  fontSize: "16px"
                 }
               },
               {
                 country: "부족",
-                value: 230,
+                value: 14,
                 config: {
-                  fill: am4core.color("#fe5855"),
-                  zIndex: 2
+                  fill: am4core.color("#fe5855")
                 },
                 configLabel: {
                   fill: am4core.color("#ffffff"),
-                  fontSize: "20px",
-                  fontWeight: "600"
+                  fontSize: "16px"
                 }
               },
               {
                 country: "충분",
-                value: 200,
+                value: 80,
                 config: {
-                  fill: am4core.color("#b9ece6"),
-                  zIndex: 1
+                  fill: am4core.color("#5bd1e6")
                 },
                 configLabel: {
-                  fill: am4core.color("#01a7c4"),
-                  fontSize: "20px",
+                  fill: am4core.color("#ffffff"),
+                  fontSize: "30px",
                   fontWeight: "600"
                 }
               }
