진단상세, 로고 추가

--- a/html/가입현황.html
+++ b/html/가입현황.html
@@ -503,7 +503,7 @@
               <button class="insurance">
                 <div class="info">
                   <div class="inner">
-                    <div class="logo"><img alt="한화생명" src="../images/temp/logo_sample01.png"></div>
+                    <div class="logo"><img alt="한화생명" src="../images/gu.renew.logo/logo_hanwha_life.png"></div>
                     <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
                     <div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
                   </div>
@@ -532,7 +532,7 @@
               <button class="insurance">
                 <div class="info">
                   <div class="inner">
-                    <div class="logo"><img alt="삼성생명" src="../images/temp/logo_sample02.png"></div>
+                    <div class="logo"><img alt="삼성생명" src="../images/gu.renew.logo/logo_samsung_life.png"></div>
                     <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
                     <div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
                   </div>
@@ -561,7 +561,7 @@
               <button class="insurance">
                 <div class="info">
                   <div class="inner">
-                    <div class="logo"><img alt="삼성생명" src="../images/temp/logo_sample02.png"></div>
+                    <div class="logo"><img alt="삼성생명" src="../images/gu.renew.logo/logo_samsung_life.png"></div>
                     <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
                     <div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
                   </div>
@@ -598,7 +598,7 @@
               <button class="insurance">
                 <div class="info">
                   <div class="inner">
-                    <div class="logo"><img alt="한화생명" src="../images/temp/logo_sample01.png"></div>
+                    <div class="logo"><img alt="한화생명" src="../images/gu.renew.logo/logo_hanwha_life.png"></div>
                     <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
                     <div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
                   </div>
@@ -638,7 +638,7 @@
               <button class="insurance disabled">
                 <div class="info">
                   <div class="inner">
-                    <div class="logo"><img alt="한화생명" class="grayscale" src="../images/temp/logo_sample01.png"></div>
+                    <div class="logo"><img alt="한화생명" class="grayscale" src="../images/gu.renew.logo/logo_hanwha_life.png"></div>
                     <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
                     <div class="date"><span class="state">실효</span>2009.07.17~2082.07.17</div>
                   </div>
@@ -667,7 +667,7 @@
               <button class="insurance disabled">
                 <div class="info">
                   <div class="inner">
-                    <div class="logo"><img alt="삼성생명" class="grayscale" src="../images/temp/logo_sample02.png"></div>
+                    <div class="logo"><img alt="삼성생명" class="grayscale" src="../images/gu.renew.logo/logo_samsung_life.png"></div>
                     <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
                     <div class="date"><span class="state">해지</span>2009.07.17~2082.07.17</div>
                   </div>
