--- a/html/컨설팅.html
+++ b/html/컨설팅.html
@@ -504,7 +504,7 @@
               <button class="insurance checked">
                 <div class="info">
                   <div class="inner">
-                    <div class="logo"><img alt="한화생명" src="../images/temp/logo_sample01.png"></div>
+                    <div class="logo"><img alt="한화생명" src="../images/gu.renew.logo/logo_hanwha_life.png"></div>
                     <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
                     <div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
                   </div>
@@ -521,7 +521,7 @@
               <button class="insurance">
                 <div class="info">
                   <div class="inner">
-                    <div class="logo"><img alt="삼성생명" src="../images/temp/logo_sample02.png"></div>
+                    <div class="logo"><img alt="삼성생명" src="../images/gu.renew.logo/logo_samsung_life.png"></div>
                     <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
                     <div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
                   </div>
@@ -549,7 +549,7 @@
               <button class="insurance checked">
                 <div class="info">
                   <div class="inner">
-                    <div class="logo"><img alt="한화생명" src="../images/temp/logo_sample01.png"></div>
+                    <div class="logo"><img alt="한화생명" src="../images/gu.renew.logo/logo_hanwha_life.png"></div>
                     <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
                     <div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
                   </div>
@@ -578,7 +578,7 @@
               <button class="insurance">
                 <div class="info">
                   <div class="inner">
-                    <div class="logo"><img alt="한화생명" src="../images/temp/logo_sample01.png"></div>
+                    <div class="logo"><img alt="한화생명" src="../images/gu.renew.logo/logo_hanwha_life.png"></div>
                     <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
                     <div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
                   </div>
