--- a/html/팝업-보장상세내역(해지).html
+++ b/html/팝업-보장상세내역(해지).html
@@ -38,7 +38,7 @@
     <div class="insurance_detail_info">
       <div class="insurance_detail">
         <div class="insurance_info">
-          <div class="logo"><img alt="삼성생명" src="../images/temp/logo_sample02.png"></div>
+          <div class="logo"><img alt="삼성생명" src="../images/gu.renew.logo/logo_samsung_life.png"></div>
           <div class="tit">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
           <div class="number"><span class="tit">증권번호</span> 6MA86MA86MA86MA8***</div>
           <div class="date"><span class="state cancel">해지</span> 2009.07.17 ~ 2082.07.17</div>
