--- a/mobile/html/index.html
+++ b/mobile/html/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <title>Title</title>
   <link href="../css/gu.renew.style.css" rel="stylesheet">
   <script src="../js/lib/jquery.min.js"></script>
