--- a/mobile/html/index_리스트.html
+++ b/mobile/html/index_리스트.html
@@ -16,73 +16,118 @@
 <body>
   <div class="wrap">
       <!-- content_area : s -->
-      <div class="content_area">  
-        <div class="list_table_type">
-          <div class="tbody_box load">
-            <a class="item" href="#">
-              <div class="tr">
-                <div class="td name">독고영재</div>
-                <div class="td gender">남</div>
-                <div class="td birth">1981.05.30</div>
-                <div class="td old">32세</div>   
-              </div>        
-            </a>
-            <a class="item" href="#">
-              <div class="tr">
-                <div class="td name">독고영재</div>
-                <div class="td gender">남</div>
-                <div class="td birth">1981.05.30</div>
-                <div class="td old">32세</div>   
-              </div>        
-            </a>
-            <a class="item" href="#">
-              <div class="tr">
-                <div class="td name">김창열</div>
-                <div class="td gender">남</div>
-                <div class="td birth">1981.05.30</div>
-                <div class="td old">32세</div>   
-              </div>        
-            </a>
-            <a class="item" href="#">
-              <div class="tr">
-                <div class="td name">송혜교</div>
-                <div class="td gender">여</div>
-                <div class="td birth">1981.05.30</div>
-                <div class="td old">32세</div>   
-              </div>        
-            </a>
-            <a class="item" href="#">
-              <div class="tr">
-                <div class="td name">독고영재</div>
-                <div class="td gender">남</div>
-                <div class="td birth">1981.05.30</div>
-                <div class="td old">32세</div>   
-              </div>        
-            </a>
-            <a class="item" href="#">
-              <div class="tr">
-                <div class="td name">독고영재</div>
-                <div class="td gender">남</div>
-                <div class="td birth">1981.05.30</div>
-                <div class="td old">32세</div>   
-              </div>        
-            </a>
-            <a class="item" href="#">
-              <div class="tr">
-                <div class="td name">김창열</div>
-                <div class="td gender">남</div>
-                <div class="td birth">1981.05.30</div>
-                <div class="td old">32세</div>   
-              </div>        
-            </a>
-            <a class="item" href="#">
-              <div class="tr">
-                <div class="td name">송혜교</div>
-                <div class="td gender">여</div>
-                <div class="td birth">1981.05.30</div>
-                <div class="td old">32세</div>   
-              </div>        
-            </a>
+      <div class="content_area"> 
+        <div class="customer_list_box"> 
+          <div class="list_table_type">
+            <div class="tbody_box load">
+              <a class="item" href="#">
+                <div class="tr">
+                  <div class="td name">독고영재</div>
+                  <div class="td gender">남</div>
+                  <div class="td birth">1981.05.30</div>
+                  <div class="td old">32세</div>   
+                </div>        
+              </a>
+              <a class="item" href="#">
+                <div class="tr">
+                  <div class="td name">독고영재</div>
+                  <div class="td gender">남</div>
+                  <div class="td birth">1981.05.30</div>
+                  <div class="td old">32세</div>   
+                </div>        
+              </a>
+              <a class="item" href="#">
+                <div class="tr">
+                  <div class="td name">김창열</div>
+                  <div class="td gender">남</div>
+                  <div class="td birth">1981.05.30</div>
+                  <div class="td old">32세</div>   
+                </div>        
+              </a>
+              <a class="item" href="#">
+                <div class="tr">
+                  <div class="td name">송혜교</div>
+                  <div class="td gender">여</div>
+                  <div class="td birth">1981.05.30</div>
+                  <div class="td old">32세</div>   
+                </div>        
+              </a>
+              <a class="item" href="#">
+                <div class="tr">
+                  <div class="td name">독고영재</div>
+                  <div class="td gender">남</div>
+                  <div class="td birth">1981.05.30</div>
+                  <div class="td old">32세</div>   
+                </div>        
+              </a>
+              <a class="item" href="#">
+                <div class="tr">
+                  <div class="td name">독고영재</div>
+                  <div class="td gender">남</div>
+                  <div class="td birth">1981.05.30</div>
+                  <div class="td old">32세</div>   
+                </div>        
+              </a>
+              <a class="item" href="#">
+                <div class="tr">
+                  <div class="td name">김창열</div>
+                  <div class="td gender">남</div>
+                  <div class="td birth">1981.05.30</div>
+                  <div class="td old">32세</div>   
+                </div>        
+              </a>
+              <a class="item" href="#">
+                <div class="tr">
+                  <div class="td name">송혜교</div>
+                  <div class="td gender">여</div>
+                  <div class="td birth">1981.05.30</div>
+                  <div class="td old">32세</div>   
+                </div>        
+              </a>
+            </div>
+          </div>
+          
+          <div class="list_grid_type">
+            <div class="item">
+              <a href="#" class="customer_info">
+                <div class="name">독고영재</div>
+                <div class="info"><span>남</span><span>1981.05.30</span><span>32세</span></div>
+                <ul>
+                  <li>
+                    <div class="tit">상령일자</div>
+                    <div class="txt">11.30</div>
+                  </li>
+                  <li>
+                    <div class="tit">동의종료</div>
+                    <div class="txt">D-45</div>
+                  </li>
+                  <li>
+                    <div class="tit">보장분석</div>
+                    <div class="txt">2019.10.14</div>
+                  </li>
+                </ul>
+              </a>
+              <div class="btn_box">
+                <div class="btn_util">
+                  <button class="btn_circle like on">
+                    <span>즐겨찾기</span>
+                  </button>
+                  <button class="btn_circle analysis on">
+                    <span>통계</span>
+                  </button>
+                  <button class="btn_circle agree on">
+                    <span>LMS</span>
+                  </button>
+                </div>
+                <div class="btn_util2">
+                  <a href="tel:0123456789" class="btn_text size_small"><span>전화</span></a>
+                  <a href="sms:0123456789" class="btn_text size_small"><span>문자</span></a>
+                  <button class="btn_text   fill_gray">
+                    <span>PDF 보기</span>
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
 
           <!-- 고객등록 버튼 : s -->
@@ -91,7 +136,6 @@
           </div>
           <!-- 고객등록 버튼 : e -->
         </div>
-        
       </div>
       <!-- content_area : e -->
   </div>
