--- a/mobile/html/sub.html
+++ b/mobile/html/sub.html
@@ -647,20 +647,21 @@
             chart2.data = [
               {
                 country: "미가입",
-                value: 6,
+                value: 40,
                 config: {
-                  fill: am4core.color("#6a8db3")
+                  fill: am4core.color("#777777")
                 },
                 configLabel: {
                   fill: am4core.color("#ffffff"),
-                  fontSize: "16px"
+                  fontSize: "30px",
+                  fontWeight: "600"
                 }
               },
               {
                 country: "부족",
-                value: 14,
+                value: 34,
                 config: {
-                  fill: am4core.color("#fe5855")
+                  fill: am4core.color("#ff4858")
                 },
                 configLabel: {
                   fill: am4core.color("#ffffff"),
@@ -669,14 +670,13 @@
               },
               {
                 country: "충분",
-                value: 80,
+                value: 26,
                 config: {
-                  fill: am4core.color("#5bd1e6")
+                  fill: am4core.color("#01a7c4")
                 },
                 configLabel: {
                   fill: am4core.color("#ffffff"),
-                  fontSize: "30px",
-                  fontWeight: "600"
+                  fontSize: "16px"
                 }
               }
             ];
