--- a/web/html/sub.html
+++ b/web/html/sub.html
@@ -544,14 +544,12 @@
                     <span class="number count">28</span>
                   </li>
                 </ul>
-                <div class="text">전체 80% 충분</div>
-
                 <div class="graph_area">
                   <div id="chartdiv2"></div>
                 </div>
                 <div class="result">
-                  <span>34%</span> 보장이 <span>부족</span>하고<br>
-                  40% 보장이 미가입 상태입니다.
+                  <strong class="color_point">34%</strong> 보장이 <strong class="color_point">부족</strong>하고<br>
+                  <strong>40%</strong> 보장이 <strong>미가입</strong> 상태입니다.
                 </div>
               </div>
 
@@ -650,36 +648,36 @@
             chart2.data = [
               {
                 country: "미가입",
-                value: 6,
+                value: 40,
                 config: {
-                  fill: am4core.color("#6a8db3")
+                  fill: am4core.color("#777777")
                 },
                 configLabel: {
                   fill: am4core.color("#ffffff"),
-                  fontSize: "16px"
+                  fontSize: "25px"
                 }
               },
               {
                 country: "부족",
-                value: 14,
+                value: 34,
                 config: {
-                  fill: am4core.color("#fe5855")
+                  fill: am4core.color("#ff4858")
                 },
                 configLabel: {
                   fill: am4core.color("#ffffff"),
-                  fontSize: "16px"
+                  fontSize: "25px",
+                  fontWeight: "600"
                 }
               },
               {
                 country: "충분",
-                value: 80,
+                value: 26,
                 config: {
-                  fill: am4core.color("#5bd1e6")
+                  fill: am4core.color("#01a7c4")
                 },
                 configLabel: {
                   fill: am4core.color("#ffffff"),
-                  fontSize: "30px",
-                  fontWeight: "600"
+                  fontSize: "16px"
                 }
               }
             ];
