--- a/web/html/그래프.html
+++ b/web/html/그래프.html
@@ -490,12 +490,12 @@
               </dl>
             </div>
           </div>
-          <div class="notice">
-            선택하신 컨설팅 전 후 비교분석 결과를 확인해보세요. <a class="btn_text size_small" href="#"><span>자세히보기</span></a>
-          </div>
         </div>
         <!-- customer_state_info : e -->
-
+        <div class="view_sort_area">
+          <button class="btn_text size_middle sort_small active"><span>작게보기</span></button>
+          <button class="btn_text size_middle sort_big"><span>크게보기</span></button>
+        </div>
         <div class="content_scroll consulting_list_scroll">
           <ul class="consulting_list">
             <li>
@@ -503,8 +503,8 @@
                 <div class="title">사망·후유장해</div>
                 <div class="graph_area" id="chartdiv1"></div>
                 <ul class="bottom_info">
-                  <li>컨설팅 전</li>
-                  <li class="color_point">컨설팅 후</li>
+                  <li class="before">컨설팅 전</li>
+                  <li class="after">컨설팅 후</li>
                   <li class="payment">권장금액</li>
                 </ul>
               </div>
@@ -514,8 +514,8 @@
                 <div class="title">진단비</div>
                 <div class="graph_area" id="chartdiv2"></div>
                 <ul class="bottom_info">
-                  <li>컨설팅 전</li>
-                  <li class="color_point">컨설팅 후</li>
+                  <li class="before">컨설팅 전</li>
+                  <li class="after">컨설팅 후</li>
                   <li class="payment">권장금액</li>
                 </ul>
               </div>
@@ -525,8 +525,8 @@
                 <div class="title">의료비·수술·입원</div>
                 <div class="graph_area" id="chartdiv3"></div>
                 <ul class="bottom_info">
-                  <li>컨설팅 전</li>
-                  <li class="color_point">컨설팅 후</li>
+                  <li class="before">컨설팅 전</li>
+                  <li class="after">컨설팅 후</li>
                   <li class="payment">권장금액</li>
                 </ul>
               </div>
@@ -536,8 +536,8 @@
                 <div class="title">운전자·기타 비용</div>
                 <div class="graph_area" id="chartdiv4"></div>
                 <ul class="bottom_info">
-                  <li>컨설팅 전</li>
-                  <li class="color_point">컨설팅 후</li>
+                  <li class="before">컨설팅 전</li>
+                  <li class="after">컨설팅 후</li>
                   <li class="payment">권장금액</li>
                 </ul>
               </div>
@@ -552,21 +552,21 @@
             //amchart 라이센스
             am4core.options.commercialLicense = true;
             var chart = am4core.create(target, am4charts.RadarChart);
-            chart.padding(30, 0, 50, 0);
+            chart.padding(30, 0, 30, 0);
             /* Add data */
-            if (target = 'chartdiv1') {
+            if (target == 'chartdiv1') {
               chart.data = [{
                 "title": "상해사망",
-                "before": 10,
-                "after": 95
+                "before": 100,
+                "after": 500
               }, {
                 "title": "질병사망",
-                "before": 15,
-                "after": 85
+                "before": 400,
+                "after": 500
               }, {
                 "title": "상해장해\n3~79%",
-                "before": 18,
-                "after": 90
+                "before": 300,
+                "after": 500
               }, {
                 "title": "상해장해\n80% 이상",
                 "before": 30,
@@ -586,101 +586,102 @@
               }];
             }
 
-            if (target = 'chartdiv2') {
+            if (target == 'chartdiv2') {
               chart.data = [{
                 "title": "상해사망",
-                "before": 10,
-                "after": 95
+                "before": 300,
+                "after": 500
               }, {
                 "title": "질병사망",
-                "before": 15,
-                "after": 85
+                "before": 300,
+                "after": 500
               }, {
                 "title": "상해장해\n3~79%",
-                "before": 18,
-                "after": 90
+                "before": 300,
+                "after": 500
               }, {
                 "title": "상해장해\n80% 이상",
-                "before": 30,
-                "after": 80
+                "before": 300,
+                "after": 500
               }, {
                 "title": "질병장해\n3~79%",
-                "before": 40,
-                "after": 80
+                "before": 300,
+                "after": 500
               }, {
                 "title": "질병장해\n80% 이상",
-                "before": 25,
-                "after": 80
+                "before": 300,
+                "after": 500
               }, {
                 "title": "질병장해\n80% 이상",
-                "before": 40,
-                "after": 80
+                "before": 300,
+                "after": 500
               }];
             }
 
-            if (target = 'chartdiv3') {
+            if (target == 'chartdiv3') {
               chart.data = [{
                 "title": "상해사망",
-                "before": 10,
-                "after": 95
+                "before": 200,
+                "after": 500
               }, {
                 "title": "질병사망",
-                "before": 15,
-                "after": 85
+                "before": 300,
+                "after": 500
               }, {
                 "title": "상해장해\n3~79%",
-                "before": 18,
-                "after": 90
+                "before": 200,
+                "after": 500
               }, {
                 "title": "상해장해\n80% 이상",
-                "before": 30,
-                "after": 80
+                "before": 300,
+                "after": 500
               }, {
                 "title": "질병장해\n3~79%",
-                "before": 40,
-                "after": 80
+                "before": 200,
+                "after": 500
               }, {
                 "title": "질병장해\n80% 이상",
-                "before": 25,
-                "after": 80
+                "before": 300,
+                "after": 500
               }, {
                 "title": "질병장해\n80% 이상",
-                "before": 40,
-                "after": 80
+                "before": 200,
+                "after": 500
               }];
             }
 
-            if (target = 'chartdiv4') {
+            if (target == 'chartdiv4') {
               chart.data = [{
                 "title": "상해사망",
-                "before": 10,
-                "after": 95
+                "before": 400,
+                "after": 500
               }, {
                 "title": "질병사망",
-                "before": 15,
-                "after": 85
+                "before": 300,
+                "after": 400
               }, {
                 "title": "상해장해\n3~79%",
-                "before": 18,
-                "after": 90
+                "before": 150,
+                "after": 300
               }, {
                 "title": "상해장해\n80% 이상",
-                "before": 30,
-                "after": 80
+                "before": 180,
+                "after": 250
               }, {
                 "title": "질병장해\n3~79%",
-                "before": 40,
-                "after": 80
+                "before": 170,
+                "after": 350
               }, {
                 "title": "질병장해\n80% 이상",
-                "before": 25,
-                "after": 80
+                "before": 400,
+                "after": 500
               }, {
                 "title": "질병장해\n80% 이상",
-                "before": 40,
-                "after": 80
+                "before": 100,
+                "after": 500
               }];
             }
+            console.log(chart.data)
 
             /* Create axes */
             var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
@@ -696,27 +697,28 @@
             valueAxis.stroke = am4core.color("#e6f4f3");
             valueAxis.renderer.labels.template.disabled = true;
             valueAxis.min = 0;
-            valueAxis.max = 100;
+            valueAxis.max = 500;
 
             /* Create and configure series */
             var series = chart.series.push(new am4charts.RadarSeries());
             series.dataFields.valueY = "before";
             series.dataFields.categoryX = "title";
-            series.strokeWidth = 0;
-            series.fillOpacity = 0.15;
-            series.fill = am4core.color("#3c444d");
+            series.strokeWidth = 2;
+            series.fillOpacity = 0;
+            series.fill = am4core.color("#6a8db3");
 
             var seriesBullet = series.bullets.push(new am4charts.CircleBullet());
-            seriesBullet.circle.radius = 2;
-            seriesBullet.circle.fill = am4core.color("#aaaaaa");
+            seriesBullet.circle.radius = 3;
+            seriesBullet.circle.fill = am4core.color("#6a8db3");
             seriesBullet.circle.strokeWidth = 0;
+
 
 
             /* Create and configure series */
             var series2 = chart.series.push(new am4charts.RadarSeries());
             series2.dataFields.valueY = "after";
             series2.dataFields.categoryX = "title";
-            series2.strokeWidth = 3;
+            series2.strokeWidth = 2;
             series2.fillOpacity = 0.15;
             series2.stroke = am4core.color("#fe5855");
             series2.fill = am4core.color("#fe5855");
@@ -749,8 +751,16 @@
             makeChart('chartdiv3');
             makeChart('chartdiv4');
             //차트 클릭시 크게 보기
-            $(document).on("click", ".item", function () {
-              $(".consulting_list").addClass("full")
+            $(document).on("click", ".view_sort_area .btn_text", function () {
+              $(".view_sort_area .btn_text").removeClass("active")
+              $(this).addClass("active")
+
+              if (!$(this).hasClass("sort_small")){
+                $(".consulting_list").addClass("full")
+              }else{
+                $(".consulting_list").removeClass("full")
+              }
+
             })
             changeLayout("sub");
             subMenuActive(4);
